[package]
name = "keyjack"
version = "0.1.0"
authors = ["Joshua Rubin <me@jawa.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
jack = "0.7.0"
jack-sys = "0.2.0"
libc = "0.2.0"
signal-hook = "0.3.0"
structopt = "0.3.0"
